// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actual.join will same as source text 1`] = `
[
  "k",
  "k",
  "a",
  "b",
  "b",
  "cccccccccccfff",
]
`;

exports[`actual.join will same as source text 2`] = `
[
  "kk",
  "ab",
  "bc",
  "cc",
  "cc",
  "ccccccfff",
]
`;

exports[`actual.join will same as source text 3`] = `
[
  "kka",
  "bbc",
  "ccc",
  "ccc",
  "ccc",
  "cfff",
]
`;

exports[`actual.join will same as source text 4`] = `
[
  "kkab",
  "bccc",
  "cccc",
  "cccc",
  "fff",
]
`;

exports[`same as string.split 1`] = `
[
  "kk",
  "ab",
  "bc",
  "cc",
  "cc",
  "cc",
  "cc",
  "cc",
  "ff",
  "f",
]
`;

exports[`same as string.split 2`] = `
[
  "",
  "kk",
  "",
  "ab",
  "",
  "bc",
  "",
  "cc",
  "",
  "cc",
  "",
  "cc",
  "",
  "cc",
  "",
  "cc",
  "",
  "ff",
  "f",
]
`;
